--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "element-ui": "^2.4.0",
     "socket.io-client": "^2.1.1"
+  },
+  "devDependencies": {
+    "vuepress-theme-reco": "^1.6.11"
   }
 }
