--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "element-ui": "^2.4.0",
+    "moment": "^2.29.3",
     "socket.io-client": "^2.1.1"
   }
 }
