--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "element-ui": "^2.4.0",
+    "leancloud-storage": "^4.12.2",
     "moment": "^2.29.3",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "valine": "^1.4.18"
   }
 }
