--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "moment": "^2.29.3",
     "socket.io-client": "^2.1.1",
     "valine": "^1.4.18"
+  },
+  "devDependencies": {
+    "vuepress-plugin-mermaidjs": "^2.0.0-beta.2"
   }
 }
