--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "valine": "^1.4.18"
   },
   "devDependencies": {
+    "vuepress": "^1.9.10",
     "vuepress-plugin-mermaidjs": "^2.0.0-beta.2"
   }
 }
